@@ -5,16 +5,16 @@ import bldutil
 progs = '''     
 aastack agmig ai2refl avo beamspray cascade c2r cell2 cell3 cgscan
 cmp2shot constfdmig2 cos2ang depth2time diffoc diffraction dimag dmo
-dsr dsr2 envelope fincon finstack fkamo fkdmo fold fourvc fourvc0 fourvc2
-freqint freqlet gazdag halfint headerattr headermath hwt2d hwtex
-infill inmo inmo3 intbin intbin3 isin2ang itaupmo itaupmo2 itaupmo3
-iwarp iwarp2 iwarp3 kirchinv kirchnew kirmod kirmod3 layer linsincos
-mig45 migsteep3 modrefl modrefl2 modrefl3 moveout nmo nmo3 nmov nmow
-nmow_adj ovc pmig pnmo pnmo3d pp2psang pp2psang2 pp2pstsic
-preconstkirch prestolt ptaupmo3 ptaupmo ptaupmoVTI pveltran map2coh
-pveltranVTI pveltran3 pyramid radial radial2 radon randrefl rays2
-rays2a rays3 refer ricker ricker1 rweab rwesrmig rwezomig s2ofz s2ofz2
-segy2rsf segyheader segyread segywrite shifts shoot2 shot2cmp
+dsr dsr2 envelope fincon finstack fkamo fkdmo fold fourvc fourvc0
+fourvc2 freqint freqlet gazdag halfint headerattr headermath hwt2d
+hwtex infill inmo inmo3 intbin intbin3 isin2ang itaupmo itaupmo2
+itaupmo3 itxmo iwarp iwarp2 iwarp3 kirchinv kirchnew kirmod kirmod3
+layer linsincos mig45 migsteep3 modrefl modrefl2 modrefl3 moveout nmo
+nmo3 nmov nmow nmow_adj ovc oway1 pmig pnmo pnmo3d pp2psang pp2psang2
+pp2pstsic preconstkirch prestolt ptaupmo3 ptaupmo ptaupmoVTI pveltran
+map2coh pveltranVTI pveltran3 pyramid radial radial2 radon randrefl
+rays2 rays2a rays3 refer ricker ricker1 rweab rwesrmig rwezomig s2ofz
+s2ofz2 segy2rsf segyheader segyread segywrite shifts shoot2 shot2cmp
 shotconstkirch shotholes shotprop sin slant srmva srsyn sstep2 stolt
 stolt2 stoltstretch stretch su2rsf tan2ang taupmo time2depth
 tlagtoang2d tshift txpscan txpnmo velmod veltran voft vofz vscan
