@@ -13,11 +13,11 @@ lpf lsfit median mffit mig3 miss3 nconv nsmooth nsmooth1 ocparcel
 octentwt ofilp ofpwd ofpwd2 ofsemb patch phaserot pick pick3 plane
 planemis2 planemis3 planereg2 planereg3 planesignoi pmshape2 predict
 pwd pwcoh pwdix pwdsigk pwdsmooth2 pwpaint pwpaint2 pwpaint3 pwspray
-pwspray2 pwspray3 regr rdiv reshape riesz rsin seislet seisigk shape
-shapeagc shapesigk shearer shift1 similarity simenv smoothreg taupfit
-thin timecont timefreq timeshift tomo trace2 trismooth2 tristack
-twodip2 twofreq2 velcon velinv vofzperm warp1 warpadd warpscan zero
-ztrace
+pwspray2 pwspray3 regr rdiv reshape riesz rsin seislet seisigk
+semblance shape shapeagc shapesigk shearer shift1 similarity simenv
+smoothreg taupfit thin timecont timefreq timeshift tomo trace2
+trismooth2 tristack twodip2 twofreq2 velcon velinv vofzperm warp1
+warpadd warpscan zero ztrace
 '''
 
 ccprogs = 'anisolr2 isolr2 isolr3 permlr1 permlr2 permlr3'
