@@ -14,6 +14,8 @@ To the Python package:
 
 To programs:
 
+* sfsemblance: semblance over the specified axis
+
 ===Bug fixes===
 
 In the reproducible documents collection:
